# vast_client

./: .gitignore  AUTO_MACRO_MAPPING_COMPLETE.md  COMMIT_HISTORY_SUMMARY.md  EMPTY_URL_FIX_SUMMARY.md  MULTI_SOURCE_ARCHITECTURE.md  Makefile  PACKAGE_MIGRATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  SETTINGS_IMPLEMENTATION.md  SSL_VERIFICATION_COMPLETE.md  SSL_VERIFICATION_GUIDE.md  SSL_VERIFICATION_IMPLEMENTATION_SUMMARY.md  SSL_VERIFICATION_QUICK_REFERENCE.md  STANDALONE_PACKAGE_MIGRATION.md  TESTS_IMPLEMENTATION_SUMMARY.md  TRACKING_FIX_SUMMARY.md  YAML_IMPLEMENTATION_COMPLETE.md  YAML_PROVIDER_CONFIG_GUIDE.md  pyproject.toml  pytest.ini  verify_implementation.py
.github/: copilot-instructions.md
benchmarks/: BENCHMARKS.md  IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  benchmark_results.py  conftest.py  multi_source_benchmarks.py
configs/: vast_config_adaptive_streaming.yaml
dashboards/: multi_source_monitoring.json
docs/: VAST_PARSER_USAGE.md
examples/: auto_macro_mapping_example.py  logging_demo.py  settings_usage.py  yaml_provider_config_example.py
examples/metrics/: README.md  basic_usage.py  prometheus_integration.py
settings/: README.md  __init__.py  config.production.yaml  config.testing.yaml  config.yaml
src/: config.py
src/vast_client/: __init__.py  base_player.py  capabilities.py  cli.py  client.py  config.py  config_resolver.py  context.py  embed_http_client.py  events.py  exceptions.py  headless_player.py  helpers.py  http.py  http_client.py  http_client_manager.py  mixins.py  parser.py  playback_session.py  player.py  player_factory.py  provider_config_loader.py  provider_factory.py  settings.py  setup.py  time_provider.py  trackable.py  tracker.py  types.py  vast_helpers.py
src/vast_client/docs/: ANALYSIS_SUMMARY.md  ARCHITECTURE.md  LOGGING_ARCHITECTURE.md  METRICS.md  README.md
src/vast_client/docs/playback_integration/: COPILOT_INSTRUCTIONS_UPDATE.md  IMPLEMENTATION_VS_PLAN_ANALYSIS.md  ORIGINAL_IMPLEMENTATION_PLAN.md  README.md  TASK_EXPORT.md  VAST_CLIENT_PLAYBACK_INTEGRATION_COMPLETE.md  VAST_CLIENT_PLAYBACK_PHASE_1_COMPLETE.md  VAST_CLIENT_PLAYBACK_PHASE_1_SUMMARY.md  VAST_CLIENT_PLAYBACK_PHASE_2_READY.md  VAST_CLIENT_PLAYBACK_QUICK_REFERENCE.md  VAST_CLIENT_PLAYBACK_T2_1_COMPLETION.md  VAST_CLIENT_PLAYBACK_T2_2_COMPLETION.md  VAST_CLIENT_PLAYBACK_T2_3_COMPLETION.md  VAST_CLIENT_PLAYBACK_T2_4_COMPLETION.md  VAST_CLIENT_PLAYBACK_T2_5_COMPLETION.md
src/vast_client/log_config/: __init__.py  main.py  tracing.py
src/vast_client/logging/: __init__.py  config.py  context.py
src/vast_client/metrics/: __init__.py  base.py  constants.py  prometheus.py
src/vast_client/multi_source/: __init__.py  fetch_config.py  fetcher.py  orchestrator.py  parse_filter.py  tracker.py  upstream.py
src/vast_client/routes/: __init__.py  helpers.py
tests/: PRODUCTION_EXTRACTION_GUIDE.md  README.md  TEST_DESIGN.md  __init__.py  conftest.py  extract_production_samples.py  test_utils.py  test_vast_parser.py  test_xpath_specs.py
tests/fixtures/: parsed_vast_data.json  vast_client_config.json
tests/iab_samples/: __init__.py  test_iab_samples.py
tests/integration/: test_client_integration.py  test_wrapper_resolution.py
tests/multi_source/: __init__.py  conftest.py  test_dict_sources.py  test_fetch_config.py  test_integration.py  test_orchestrator.py  test_parse_filter.py  test_upstreams.py
tests/production_samples/: README.md  __init__.py  production_metadata.json  test_production_samples.py
tests/unit/: test_auto_macro_mapping.py  test_client.py  test_config.py  test_metrics.py  test_parser.py  test_time_provider.py  test_trackable.py  test_tracker.py
tests/unit/logging/: __init__.py  test_config.py  test_context.py
vast_parser/: __init__.py  parser.py
